--- a/src/Assets/scss/partials/_contact.scss
+++ b/src/Assets/scss/partials/_contact.scss
@@ -4,18 +4,21 @@
   .contact__wrapper {
     background: $demoBackground;
     height: 100vh;
-    padding-top: 4rem;
+    padding-top: 2.5rem;
+    position: relative;
     .particles {
       width: 100%;
       height: 100%;
       position: absolute;
       top: 0;
       left: 0;
-      z-index: -2;
+      z-index: 0;
     }
 
     &__inner {
       width: 85%;
+      position: relative;
+      z-index: 2;
       margin: 0 auto;
       padding: 2.5rem 0 0 0;
       color: $demoColour;
@@ -168,7 +171,7 @@
     padding-top: 6rem;
     &__inner {
       h2 {
-        font-size: 2.25rem;
+        font-size: 2rem;
       }
       p {
         font-size: 1.15rem;
