--- a/src/Assets/scss/partials/_header.scss
+++ b/src/Assets/scss/partials/_header.scss
@@ -5,19 +5,21 @@
     color: $demoColour;
     padding-top: 1rem;
     height: 100vh !important;
+    position: relative;
     top: 0;
-    position: sticky;
     .particles {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -4;
+      z-index: 3;
     }
     &__title {
       width: 80%;
       margin: 0 auto;
+      position: relative;
+      z-index: 4;
       // margin: 5rem auto 0 auto;
       padding: 4.5rem 0;
       h1 {
@@ -92,6 +94,7 @@
 @media only screen and (min-width: 768px) {
   .header__wrapper {
     padding-top: 15rem;
+    height: 100vh;
     &__title {
       width: 70%;
       margin: 0 20% 0 10%;
