--- a/src/Assets/scss/partials/_page.scss
+++ b/src/Assets/scss/partials/_page.scss
@@ -6,9 +6,8 @@
     width: 100%;
     &__page {
       width: 100%;
-      height: 150vh;
+      height: 100%;
       background: $demoBackground;
-      position: sticky;
       top: 0;
     }
   }
@@ -21,8 +20,11 @@
       display: grid;
       grid-template-columns: 50% 50%;
       .desktop__display__gird--one {
+        position: relative;
         .header__wrapper {
           height: 100vh;
+          width: 50%;
+          position: fixed;
         }
       }
     }
