--- a/src/Assets/scss/partials/_projects.scss
+++ b/src/Assets/scss/partials/_projects.scss
@@ -2,8 +2,7 @@
 @media only screen and (min-width: 320px) {
   .projects__wrapper {
     background: #fff;
-    height: 150vh;
-    padding-top: 2rem;
+    height: 100%;
     &__inner {
       width: 85%;
       margin: 0 auto;
@@ -78,11 +77,10 @@
 }
 @media only screen and (min-width: 375px) {
   .projects__wrapper {
-    padding-top: 5rem;
     &__inner {
       &__title {
         h2 {
-          font-size: 2.25rem;
+          font-size: 2rem;
         }
         p {
           font-size: 1.05rem;
@@ -127,7 +125,7 @@
 @media only screen and (min-width: 768px) {
   .projects__wrapper {
     &__inner {
-      padding-top: 5.5rem;
+      padding: 4.5rem 0;
       &__title {
         width: 70%;
         h2 {
@@ -152,12 +150,13 @@
 }
 @media only screen and (min-width: 1280px) {
   .projects__wrapper {
+    height: 100vh;
     &__inner {
-      padding-top: 1rem;
+      padding-top: 5rem;
       &__title {
-        width: 70%;
+        width: 85%;
         h2 {
-          font-size: 2.5rem;
+          font-size: 2rem;
         }
         p {
           font-size: 1.15rem;
